test/test-files/analyzer/variables/error-variable-const-not-modified-1/exception.out
Semantic error in : ./test-files/analyzer/variables/error-variable-const-not-modified-1/source.spice:3:5:
Cannot re-assign constant variable: Not re-assignable variable 'variable'

variable = 3.2;
^^^^^^^^